// Generated by srotoc. DO NOT EDIT!

syntax = "proto3";

package example.viewspb;

option (droto.model_serializers) = {
    fields_arr: "id",
    fields_arr: "username",
    fields_arr: "about_me",
    model_name: "User",
    models_go_package: "github.com/tomlinford/droto/example/modelspb",
    view_go_package: "github.com/tomlinford/droto/example/viewspb",
    view_message_name: "User"
};
option go_package = "github.com/tomlinford/droto/example/viewspb";

import "droto.proto";
import "google/protobuf/wrappers.proto";

message GetUserRequest {
    int64 id = 1;
}

message ListUsersRequest {
    string cursor = 100;
}

message ListUsersResponse {
    repeated User results = 1;
    ListUsersRequest next = 2;
    ListUsersRequest prev = 3;
}

message User {
    int64 id = 1;
    string username = 2;
    google.protobuf.StringValue about_me = 3;
}

service UserService {
    rpc GetUser(GetUserRequest) returns (User);
    rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
}
